--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -1,16 +1,43 @@
-# This workflow uses actions that are not certified by GitHub.
-name: OSV-Scanner
+name: OSV-Scanner Workflow
+
 on:
-  pull_request: { branches: [ "main" ] }
-  merge_group: { branches: [ "main" ] }
-  schedule: [ { cron: '38 6 * * 6' } ]
-  push: { branches: [ "main" ] }
-permissions: { security-events: write, contents: read }
-jobs: {                                                                                                                                                                                                                                            scan-scheduled: { if: ${{ github.event_name == 'push' || github.event_name == 'schedule' }}, uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable.yml@1f1242919d8a60496dd1874b24b62b2370ed4c78", with: { scan-args: |-
+  # Triggers the workflow for pull requests to the main branch
+  pull_request:
+    branches:
+      - main
+  # Triggers for merge groups targeting the main branch
+  merge_group:
+    branches:
+      - main
+  # Scheduled scan every Saturday at 06:38 UTC
+  schedule:
+    - cron: '38 6 * * 6'
+  # Triggers for pushes to the main branch
+  push:
+    branches:
+      - main
+
+permissions:
+  security-events: write
+  contents: read
+
+jobs:
+  # Scheduled and push scans
+  scan-scheduled:
+    if: ${{ github.event_name == 'push' || github.event_name == 'schedule' }}
+    uses: google/osv-scanner-action/.github/workflows/osv-scanner-reusable.yml@v1
+    with:
+      scan-args: |
         -r
         --skip-git
-        ./ } },                                                                                                                                                                                                                                    scan-pr: { if: ${{ github.event_name == 'pull_request' || github.event_name == 'merge_group' }}, uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@1f1242919d8a60496dd1874b24b62b2370ed4c78", with: { scan-args: |-
-                -r
-                --skip-git
-                ./
-        } } }
+        ./
+
+  # Pull request and merge group scans
+  scan-pr:
+    if: ${{ github.event_name == 'pull_request' || github.event_name == 'merge_group' }}
+    uses: google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@v1
+    with:
+      scan-args: |
+        -r
+        --skip-git
+        ./
